[gd_scene load_steps=3 format=3 uid="uid://bk8i1bu0r5gsg"]

[ext_resource type="Script" path="res://misc/pausemenu/pause_menu.gd" id="1_mlhyt"]
[ext_resource type="Theme" uid="uid://6qrfrr3nx70f" path="res://units/fcc/fcc_assets/fcc_buttons.tres" id="2_jyo4h"]

[node name="Pause" type="ColorRect"]
process_mode = 3
z_index = 100
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)
script = ExtResource("1_mlhyt")

[node name="sure" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 204.0
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="sure"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -176.0
offset_right = 320.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.545098)

[node name="Label" type="Label" parent="sure"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -176.0
offset_right = 320.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 21
text = "Warning: All your upgrades made in the VOID will be reset.
Only Engion in the storage will persist."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -196.0
offset_right = 52.5
offset_bottom = -151.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Paused"

[node name="resume" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = 156.0
offset_right = -64.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_jyo4h")
text = "Resume"

[node name="exit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = 156.0
offset_right = 192.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_jyo4h")
text = "Exit The VOID"

[node name="hi_score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -116.0
offset_right = 512.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 2
text = "High Score: %s"
horizontal_alignment = 1
vertical_alignment = 1

[node name="score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -84.0
offset_right = 512.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 2
text = "Score: %s"
horizontal_alignment = 1
vertical_alignment = 1

[node name="e_store" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -52.0
offset_right = 512.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
text = "Engion: %s"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
